adapted tutorial for Docker (paths)

--- a/tutorial/02-kg-profiling.ipynb
+++ b/tutorial/02-kg-profiling.ipynb
@@ -59,14 +59,14 @@
    "source": [
     "# Parameters\n",
     "\n",
-    "kgtk_path = \"/Users/pedroszekely/Documents/GitHub/kgtk\"\n",
+    "kgtk_path = \"/kgtk\"\n",
     "\n",
-    "tutorial_deployment_path = \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets\"\n",
+    "tutorial_deployment_path = \"/out/datasets\"\n",
     "project_deployment_path = tutorial_deployment_path + \"/arnold-profiled\"\n",
     "\n",
     "# Folder on local machine where to create the output and temporary folders\n",
-    "input_path = \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold\"\n",
-    "output_path = \"/Users/pedroszekely/Downloads/kypher/projects\"\n",
+    "input_path = \"/out/datasets/arnold\"\n",
+    "output_path = \"/out/projects\"\n",
     "project_name = \"tutorial-profiling\""
    ]
   },
@@ -86,10 +86,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "User home: /Users/pedroszekely\n",
-      "Current dir: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/tutorial\n",
-      "KGTK dir: /Users/pedroszekely/Documents/GitHub/kgtk\n",
-      "Use-cases dir: /Users/pedroszekely/Documents/GitHub/kgtk/use-cases\n"
+      "User home: /home/jovyan\n",
+      "Current dir: /out/tutorial\n",
+      "KGTK dir: /kgtk\n",
+      "Use-cases dir: /kgtk/use-cases\n"
      ]
     }
    ],
@@ -138,37 +138,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GRAPH: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold\n",
-      "EXAMPLES_DIR: /Users/pedroszekely/Documents/GitHub/kgtk/examples\n",
       "kgtk: kgtk\n",
-      "OUT: /Users/pedroszekely/Downloads/kypher/projects/tutorial-profiling\n",
-      "TEMP: /Users/pedroszekely/Downloads/kypher/projects/tutorial-profiling/temp.tutorial-profiling\n",
+      "kypher: kgtk query --graph-cache /out/projects/tutorial-profiling/temp.tutorial-profiling/wikidata.sqlite3.db\n",
+      "USE_CASES_DIR: /kgtk/use-cases\n",
+      "EXAMPLES_DIR: /kgtk/examples\n",
       "KGTK_OPTION_DEBUG: false\n",
-      "KGTK_GRAPH_CACHE: /Users/pedroszekely/Downloads/kypher/projects/tutorial-profiling/temp.tutorial-profiling/wikidata.sqlite3.db\n",
-      "kypher: kgtk query --graph-cache /Users/pedroszekely/Downloads/kypher/projects/tutorial-profiling/temp.tutorial-profiling/wikidata.sqlite3.db\n",
-      "STORE: /Users/pedroszekely/Downloads/kypher/projects/tutorial-profiling/temp.tutorial-profiling/wikidata.sqlite3.db\n",
-      "KGTK_LABEL_FILE: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/labels.en.tsv.gz\n",
-      "USE_CASES_DIR: /Users/pedroszekely/Documents/GitHub/kgtk/use-cases\n",
-      "all: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/all.tsv.gz\n",
-      "label: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/labels.en.tsv.gz\n",
-      "alias: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/aliases.en.tsv.gz\n",
-      "description: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/descriptions.en.tsv.gz\n",
-      "external_id: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/claims.external-id.tsv.gz\n",
-      "monolingualtext: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/claims.monolingualtext.tsv.gz\n",
-      "quantity: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/claims.quantity.tsv.gz\n",
-      "string: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/claims.string.tsv.gz\n",
-      "time: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/claims.time.tsv.gz\n",
-      "item: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/claims.wikibase-item.tsv.gz\n",
-      "wikibase_property: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/claims.wikibase-property.tsv.gz\n",
-      "qualifiers: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/qualifiers.tsv.gz\n",
-      "datatypes: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/metadata.property.datatypes.tsv.gz\n",
-      "p279: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/derived.P279.tsv.gz\n",
-      "p279star: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/derived.P279star.tsv.gz\n",
-      "p31: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/derived.P31.tsv.gz\n",
-      "in_degree: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/metadata.in_degree.tsv.gz\n",
-      "out_degree: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/metadata.out_degree.tsv.gz\n",
-      "pagerank_directed: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/metadata.pagerank.directed.tsv.gz\n",
-      "pagerank_undirected: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/metadata.pagerank.undirected.tsv.gz\n"
+      "KGTK_LABEL_FILE: /out/datasets/arnold/labels.en.tsv.gz\n",
+      "STORE: /out/projects/tutorial-profiling/temp.tutorial-profiling/wikidata.sqlite3.db\n",
+      "KGTK_GRAPH_CACHE: /out/projects/tutorial-profiling/temp.tutorial-profiling/wikidata.sqlite3.db\n",
+      "GRAPH: /out/datasets/arnold\n",
+      "OUT: /out/projects/tutorial-profiling\n",
+      "TEMP: /out/projects/tutorial-profiling/temp.tutorial-profiling\n",
+      "all: /out/datasets/arnold/all.tsv.gz\n",
+      "label: /out/datasets/arnold/labels.en.tsv.gz\n",
+      "alias: /out/datasets/arnold/aliases.en.tsv.gz\n",
+      "description: /out/datasets/arnold/descriptions.en.tsv.gz\n",
+      "external_id: /out/datasets/arnold/claims.external-id.tsv.gz\n",
+      "monolingualtext: /out/datasets/arnold/claims.monolingualtext.tsv.gz\n",
+      "quantity: /out/datasets/arnold/claims.quantity.tsv.gz\n",
+      "string: /out/datasets/arnold/claims.string.tsv.gz\n",
+      "time: /out/datasets/arnold/claims.time.tsv.gz\n",
+      "item: /out/datasets/arnold/claims.wikibase-item.tsv.gz\n",
+      "wikibase_property: /out/datasets/arnold/claims.wikibase-property.tsv.gz\n",
+      "qualifiers: /out/datasets/arnold/qualifiers.tsv.gz\n",
+      "datatypes: /out/datasets/arnold/metadata.property.datatypes.tsv.gz\n",
+      "p279: /out/datasets/arnold/derived.P279.tsv.gz\n",
+      "p279star: /out/datasets/arnold/derived.P279star.tsv.gz\n",
+      "p31: /out/datasets/arnold/derived.P31.tsv.gz\n",
+      "in_degree: /out/datasets/arnold/metadata.in_degree.tsv.gz\n",
+      "out_degree: /out/datasets/arnold/metadata.out_degree.tsv.gz\n",
+      "pagerank_directed: /out/datasets/arnold/metadata.pagerank.directed.tsv.gz\n",
+      "pagerank_undirected: /out/datasets/arnold/metadata.pagerank.undirected.tsv.gz\n"
      ]
     }
    ],
@@ -208,13 +208,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kgtk query --graph-cache /Users/pedroszekely/Downloads/kypher/projects/tutorial-profiling/temp.tutorial-profiling/wikidata.sqlite3.db -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/all.tsv.gz\" --as all  -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/labels.en.tsv.gz\" --as label  -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/aliases.en.tsv.gz\" --as alias  -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/descriptions.en.tsv.gz\" --as description  -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/claims.external-id.tsv.gz\" --as external_id  -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/claims.monolingualtext.tsv.gz\" --as monolingualtext  -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/claims.quantity.tsv.gz\" --as quantity  -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/claims.string.tsv.gz\" --as string  -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/claims.time.tsv.gz\" --as time  -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/claims.wikibase-item.tsv.gz\" --as item  -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/claims.wikibase-property.tsv.gz\" --as wikibase_property  -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/qualifiers.tsv.gz\" --as qualifiers  -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/metadata.property.datatypes.tsv.gz\" --as datatypes  -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/derived.P279.tsv.gz\" --as p279  -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/derived.P279star.tsv.gz\" --as p279star  -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/derived.P31.tsv.gz\" --as p31  -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/metadata.in_degree.tsv.gz\" --as in_degree  -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/metadata.out_degree.tsv.gz\" --as out_degree  -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/metadata.pagerank.directed.tsv.gz\" --as pagerank_directed  -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold/metadata.pagerank.undirected.tsv.gz\" --as pagerank_undirected  --limit 3\n",
+      "kgtk query --graph-cache /out/projects/tutorial-profiling/temp.tutorial-profiling/wikidata.sqlite3.db -i \"/out/datasets/arnold/all.tsv.gz\" --as all  -i \"/out/datasets/arnold/labels.en.tsv.gz\" --as label  -i \"/out/datasets/arnold/aliases.en.tsv.gz\" --as alias  -i \"/out/datasets/arnold/descriptions.en.tsv.gz\" --as description  -i \"/out/datasets/arnold/claims.external-id.tsv.gz\" --as external_id  -i \"/out/datasets/arnold/claims.monolingualtext.tsv.gz\" --as monolingualtext  -i \"/out/datasets/arnold/claims.quantity.tsv.gz\" --as quantity  -i \"/out/datasets/arnold/claims.string.tsv.gz\" --as string  -i \"/out/datasets/arnold/claims.time.tsv.gz\" --as time  -i \"/out/datasets/arnold/claims.wikibase-item.tsv.gz\" --as item  -i \"/out/datasets/arnold/claims.wikibase-property.tsv.gz\" --as wikibase_property  -i \"/out/datasets/arnold/qualifiers.tsv.gz\" --as qualifiers  -i \"/out/datasets/arnold/metadata.property.datatypes.tsv.gz\" --as datatypes  -i \"/out/datasets/arnold/derived.P279.tsv.gz\" --as p279  -i \"/out/datasets/arnold/derived.P279star.tsv.gz\" --as p279star  -i \"/out/datasets/arnold/derived.P31.tsv.gz\" --as p31  -i \"/out/datasets/arnold/metadata.in_degree.tsv.gz\" --as in_degree  -i \"/out/datasets/arnold/metadata.out_degree.tsv.gz\" --as out_degree  -i \"/out/datasets/arnold/metadata.pagerank.directed.tsv.gz\" --as pagerank_directed  -i \"/out/datasets/arnold/metadata.pagerank.undirected.tsv.gz\" --as pagerank_undirected  --limit 3\n",
       "node1\tlabel\tnode2\tid\tnode2;wikidatatype\n",
       "P10\talias\t'gif'@en\tP10-alias-en-282226-0\t\n",
       "P10\talias\t'animation'@en\tP10-alias-en-2f86d8-0\t\n",
       "P10\talias\t'media'@en\tP10-alias-en-c1427e-0\t\n",
-      "CPU times: user 6.86 ms, sys: 12.6 ms, total: 19.5 ms\n",
-      "Wall time: 33.5 s\n"
+      "CPU times: user 5.62 ms, sys: 1.37 ms, total: 6.99 ms\n",
+      "Wall time: 8.4 s\n"
      ]
     }
    ],
@@ -250,7 +250,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 2614950\n"
+      "2614950\n"
      ]
     }
    ],
@@ -408,8 +408,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5.68 ms, sys: 16.4 ms, total: 22 ms\n",
-      "Wall time: 2.32 s\n"
+      "CPU times: user 3.31 ms, sys: 11.8 ms, total: 15.2 ms\n",
+      "Wall time: 2.19 s\n"
      ]
     },
     {
@@ -480,8 +480,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5.74 ms, sys: 14.6 ms, total: 20.4 ms\n",
-      "Wall time: 565 ms\n"
+      "CPU times: user 6.24 ms, sys: 4.48 ms, total: 10.7 ms\n",
+      "Wall time: 686 ms\n"
      ]
     },
     {
@@ -554,8 +554,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6.19 ms, sys: 15.9 ms, total: 22.1 ms\n",
-      "Wall time: 1.06 s\n"
+      "CPU times: user 7.7 ms, sys: 12.8 ms, total: 20.5 ms\n",
+      "Wall time: 1.05 s\n"
      ]
     },
     {
@@ -4940,9 +4940,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "kgtk",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "kgtk"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4954,7 +4954,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
