--- a/tutorial/03-kg-graph-embeddings.ipynb
+++ b/tutorial/03-kg-graph-embeddings.ipynb
@@ -1,6 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e256f29c",
+   "metadata": {},
+   "source": [
+    "### Setup (in Docker)\n",
+    "This notebook was tested using the Docker installation of KGTK. It was run from the [KGTK Notebooks cloned repository](https://github.com/usc-isi-i2/kgtk-notebooks/) as PWD. With that configuration, no changes should be needed to run the notebook.\n",
+    "\n",
+    "First, cd into the kgtk-notebooks folder:\n",
+    "\n",
+    "`cd kgtk-notebooks`\n",
+    "\n",
+    "Then run Docker:\n",
+    "\n",
+    "```\n",
+    "docker run -it --rm -v $PWD:/out -p 8888:8888 uscisii2/kgtk:latest-dev /bin/bash -c \"jupyter notebook --ip='*' --port=8888 --no-browser\"\n",
+    "```\n",
+    "\n",
+    "Notebooks can be found in `/out/tutorial/` "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "stuffed-forge",
@@ -29,11 +50,10 @@
     "# Parameters\n",
     "\n",
     "# Folder on local machine where to create the output and temporary folders\n",
-    "input_path = \"/Volumes/saggu-ssd/kgtk-tutorial-files/datasets/arnold-profiled\"\n",
-    "# input_path = \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled\"\n",
+    "tutorial_deployment_path = \"/out/datasets\"\n",
+    "input_path = tutorial_deployment_path + \"/arnold-profiled\"\n",
     "\n",
-    "output_path = \"/Volumes/saggu-ssd/projects\"\n",
-    "# output_path = \"/Users/pedroszekely/Downloads/kypher/projects\"\n",
+    "output_path = \"/out/projects\"\n",
     "\n",
     "project_name = \"tutorial-graph-embeddings\""
    ]
@@ -48,10 +68,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "User home: /Users/amandeep\n",
-      "Current dir: /Users/amandeep/Github/kgtk-notebooks/tutorial\n",
-      "KGTK dir: /Users/amandeep/Github/kgtk-notebooks\n",
-      "Use-cases dir: /Users/amandeep/Github/kgtk-notebooks/use-cases\n"
+      "User home: /home/jovyan\n",
+      "Current dir: /out/tutorial\n",
+      "KGTK dir: /out\n",
+      "Use-cases dir: /out/use-cases\n"
      ]
     }
    ],
@@ -82,25 +102,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "STORE: /Volumes/saggu-ssd/projects/tutorial-graph-embeddings/temp.tutorial-graph-embeddings/wikidata.sqlite3.db\n",
-      "TEMP: /Volumes/saggu-ssd/projects/tutorial-graph-embeddings/temp.tutorial-graph-embeddings\n",
       "kgtk: kgtk\n",
-      "KGTK_GRAPH_CACHE: /Volumes/saggu-ssd/projects/tutorial-graph-embeddings/temp.tutorial-graph-embeddings/wikidata.sqlite3.db\n",
+      "KGTK_GRAPH_CACHE: /out/projects/tutorial-graph-embeddings/temp.tutorial-graph-embeddings/wikidata.sqlite3.db\n",
       "KGTK_OPTION_DEBUG: false\n",
-      "OUT: /Volumes/saggu-ssd/projects/tutorial-graph-embeddings\n",
-      "GRAPH: /Volumes/saggu-ssd/kgtk-tutorial-files/datasets/arnold-profiled\n",
-      "KGTK_LABEL_FILE: /Volumes/saggu-ssd/kgtk-tutorial-files/datasets/arnold-profiled/labels.en.tsv.gz\n",
-      "EXAMPLES_DIR: /Users/amandeep/Github/kgtk-notebooks/examples\n",
-      "kypher: kgtk query --graph-cache /Volumes/saggu-ssd/projects/tutorial-graph-embeddings/temp.tutorial-graph-embeddings/wikidata.sqlite3.db\n",
-      "USE_CASES_DIR: /Users/amandeep/Github/kgtk-notebooks/use-cases\n",
-      "all: /Volumes/saggu-ssd/kgtk-tutorial-files/datasets/arnold-profiled/all.tsv.gz\n",
-      "label: /Volumes/saggu-ssd/kgtk-tutorial-files/datasets/arnold-profiled/labels.en.tsv.gz\n",
-      "alias: /Volumes/saggu-ssd/kgtk-tutorial-files/datasets/arnold-profiled/aliases.en.tsv.gz\n",
-      "description: /Volumes/saggu-ssd/kgtk-tutorial-files/datasets/arnold-profiled/descriptions.en.tsv.gz\n",
-      "item: /Volumes/saggu-ssd/kgtk-tutorial-files/datasets/arnold-profiled/claims.wikibase-item.tsv.gz\n",
-      "qualifiers: /Volumes/saggu-ssd/kgtk-tutorial-files/datasets/arnold-profiled/qualifiers.tsv.gz\n",
-      "p31: /Volumes/saggu-ssd/kgtk-tutorial-files/datasets/arnold-profiled/derived.P31.tsv.gz\n",
-      "p279star: /Volumes/saggu-ssd/kgtk-tutorial-files/datasets/arnold-profiled/derived.P279star.tsv.gz\n"
+      "kypher: kgtk query --graph-cache /out/projects/tutorial-graph-embeddings/temp.tutorial-graph-embeddings/wikidata.sqlite3.db\n",
+      "EXAMPLES_DIR: /out/examples\n",
+      "STORE: /out/projects/tutorial-graph-embeddings/temp.tutorial-graph-embeddings/wikidata.sqlite3.db\n",
+      "OUT: /out/projects/tutorial-graph-embeddings\n",
+      "GRAPH: /out/datasets/arnold-profiled\n",
+      "KGTK_LABEL_FILE: /out/datasets/arnold-profiled/labels.en.tsv.gz\n",
+      "USE_CASES_DIR: /out/use-cases\n",
+      "TEMP: /out/projects/tutorial-graph-embeddings/temp.tutorial-graph-embeddings\n",
+      "all: /out/datasets/arnold-profiled/all.tsv.gz\n",
+      "label: /out/datasets/arnold-profiled/labels.en.tsv.gz\n",
+      "alias: /out/datasets/arnold-profiled/aliases.en.tsv.gz\n",
+      "description: /out/datasets/arnold-profiled/descriptions.en.tsv.gz\n",
+      "item: /out/datasets/arnold-profiled/claims.wikibase-item.tsv.gz\n",
+      "qualifiers: /out/datasets/arnold-profiled/qualifiers.tsv.gz\n",
+      "p31: /out/datasets/arnold-profiled/derived.P31.tsv.gz\n",
+      "p279star: /out/datasets/arnold-profiled/derived.P279star.tsv.gz\n"
      ]
     }
    ],
@@ -118,7 +138,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kgtk query --graph-cache /Volumes/saggu-ssd/projects/tutorial-graph-embeddings/temp.tutorial-graph-embeddings/wikidata.sqlite3.db -i \"/Volumes/saggu-ssd/kgtk-tutorial-files/datasets/arnold-profiled/all.tsv.gz\" --as all  -i \"/Volumes/saggu-ssd/kgtk-tutorial-files/datasets/arnold-profiled/labels.en.tsv.gz\" --as label  -i \"/Volumes/saggu-ssd/kgtk-tutorial-files/datasets/arnold-profiled/aliases.en.tsv.gz\" --as alias  -i \"/Volumes/saggu-ssd/kgtk-tutorial-files/datasets/arnold-profiled/descriptions.en.tsv.gz\" --as description  -i \"/Volumes/saggu-ssd/kgtk-tutorial-files/datasets/arnold-profiled/claims.wikibase-item.tsv.gz\" --as item  -i \"/Volumes/saggu-ssd/kgtk-tutorial-files/datasets/arnold-profiled/qualifiers.tsv.gz\" --as qualifiers  -i \"/Volumes/saggu-ssd/kgtk-tutorial-files/datasets/arnold-profiled/derived.P31.tsv.gz\" --as p31  -i \"/Volumes/saggu-ssd/kgtk-tutorial-files/datasets/arnold-profiled/derived.P279star.tsv.gz\" --as p279star  --limit 3\n",
+      "kgtk query --graph-cache /out/projects/tutorial-graph-embeddings/temp.tutorial-graph-embeddings/wikidata.sqlite3.db -i \"/out/datasets/arnold-profiled/all.tsv.gz\" --as all  -i \"/out/datasets/arnold-profiled/labels.en.tsv.gz\" --as label  -i \"/out/datasets/arnold-profiled/aliases.en.tsv.gz\" --as alias  -i \"/out/datasets/arnold-profiled/descriptions.en.tsv.gz\" --as description  -i \"/out/datasets/arnold-profiled/claims.wikibase-item.tsv.gz\" --as item  -i \"/out/datasets/arnold-profiled/qualifiers.tsv.gz\" --as qualifiers  -i \"/out/datasets/arnold-profiled/derived.P31.tsv.gz\" --as p31  -i \"/out/datasets/arnold-profiled/derived.P279star.tsv.gz\" --as p279star  --limit 3\n",
       "node1\tlabel\tnode2\tid\tnode2;wikidatatype\n",
       "P10\talias\t'gif'@en\tP10-alias-en-282226-0\t\n",
       "P10\talias\t'animation'@en\tP10-alias-en-2f86d8-0\t\n",
@@ -213,7 +233,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "In Processing, Please go to /Volumes/saggu-ssd/projects/tutorial-graph-embeddings/temp.tutorial-graph-embeddings/ge.log.txt to check details\n",
+      "In Processing, Please go to /out/projects/tutorial-graph-embeddings/temp.tutorial-graph-embeddings/ge.log.txt to check details\n",
       "Processed Finished.\n",
       "\n"
      ]
@@ -275,63 +295,63 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Q1985349</td>\n",
+       "      <td>Q751387</td>\n",
        "      <td>graph_embeddings</td>\n",
-       "      <td>0.095617205,0.177213788,-0.531302392,0.0149832...</td>\n",
+       "      <td>0.005715230,0.510471702,0.033976879,-0.3465846...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Q3433371</td>\n",
+       "      <td>Q1197185</td>\n",
        "      <td>graph_embeddings</td>\n",
-       "      <td>-0.425078452,0.311085939,-0.395117164,-0.20244...</td>\n",
+       "      <td>0.669723332,0.194473907,-0.059623960,0.0078022...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Q317033</td>\n",
+       "      <td>Q364</td>\n",
        "      <td>graph_embeddings</td>\n",
-       "      <td>-0.037620947,-0.034569997,-0.559339046,-0.0498...</td>\n",
+       "      <td>-0.286623657,-0.475376040,0.389155418,-0.02148...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Q61587085</td>\n",
+       "      <td>Q5029574</td>\n",
        "      <td>graph_embeddings</td>\n",
-       "      <td>-0.854337215,0.378212988,0.159523264,0.2521645...</td>\n",
+       "      <td>-0.235650897,0.229146853,0.033960193,0.4140678...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Q1788392</td>\n",
+       "      <td>Q1603219</td>\n",
        "      <td>graph_embeddings</td>\n",
-       "      <td>-0.079702675,0.017837998,-0.579188764,0.020623...</td>\n",
+       "      <td>0.015312393,-0.347834826,0.548787832,0.3676181...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>Q824239</td>\n",
+       "      <td>Q49515828</td>\n",
        "      <td>graph_embeddings</td>\n",
-       "      <td>-0.458180159,0.988832235,0.195631877,-0.169714...</td>\n",
+       "      <td>-0.042989660,-0.117782094,-0.385408580,-0.0250...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>Q667414</td>\n",
+       "      <td>Q106508</td>\n",
        "      <td>graph_embeddings</td>\n",
-       "      <td>-0.577477098,-0.201578721,0.198262930,-0.21542...</td>\n",
+       "      <td>-0.090764917,0.362341970,0.091229148,0.0380375...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Q389738</td>\n",
+       "      <td>Q5925991</td>\n",
        "      <td>graph_embeddings</td>\n",
-       "      <td>-0.167402312,-0.300356328,0.217027649,0.213924...</td>\n",
+       "      <td>-0.022352766,0.292867452,0.112427264,-0.548713...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>Q3521099</td>\n",
+       "      <td>Q18424</td>\n",
        "      <td>graph_embeddings</td>\n",
-       "      <td>0.500424862,-0.188686818,0.364933997,-0.397513...</td>\n",
+       "      <td>-0.148279175,-0.122559994,0.022042088,0.378735...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>Q1701463</td>\n",
+       "      <td>Q2188455</td>\n",
        "      <td>graph_embeddings</td>\n",
-       "      <td>0.245370045,0.016124398,-0.572334230,-0.147857...</td>\n",
+       "      <td>-0.724805176,0.686601639,0.449069679,-0.350856...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -339,28 +359,28 @@
       ],
       "text/plain": [
        "       node1             label  \\\n",
-       "0   Q1985349  graph_embeddings   \n",
-       "1   Q3433371  graph_embeddings   \n",
-       "2    Q317033  graph_embeddings   \n",
-       "3  Q61587085  graph_embeddings   \n",
-       "4   Q1788392  graph_embeddings   \n",
-       "5    Q824239  graph_embeddings   \n",
-       "6    Q667414  graph_embeddings   \n",
-       "7    Q389738  graph_embeddings   \n",
-       "8   Q3521099  graph_embeddings   \n",
-       "9   Q1701463  graph_embeddings   \n",
+       "0    Q751387  graph_embeddings   \n",
+       "1   Q1197185  graph_embeddings   \n",
+       "2       Q364  graph_embeddings   \n",
+       "3   Q5029574  graph_embeddings   \n",
+       "4   Q1603219  graph_embeddings   \n",
+       "5  Q49515828  graph_embeddings   \n",
+       "6    Q106508  graph_embeddings   \n",
+       "7   Q5925991  graph_embeddings   \n",
+       "8     Q18424  graph_embeddings   \n",
+       "9   Q2188455  graph_embeddings   \n",
        "\n",
        "                                               node2  \n",
-       "0  0.095617205,0.177213788,-0.531302392,0.0149832...  \n",
-       "1  -0.425078452,0.311085939,-0.395117164,-0.20244...  \n",
-       "2  -0.037620947,-0.034569997,-0.559339046,-0.0498...  \n",
-       "3  -0.854337215,0.378212988,0.159523264,0.2521645...  \n",
-       "4  -0.079702675,0.017837998,-0.579188764,0.020623...  \n",
-       "5  -0.458180159,0.988832235,0.195631877,-0.169714...  \n",
-       "6  -0.577477098,-0.201578721,0.198262930,-0.21542...  \n",
-       "7  -0.167402312,-0.300356328,0.217027649,0.213924...  \n",
-       "8  0.500424862,-0.188686818,0.364933997,-0.397513...  \n",
-       "9  0.245370045,0.016124398,-0.572334230,-0.147857...  "
+       "0  0.005715230,0.510471702,0.033976879,-0.3465846...  \n",
+       "1  0.669723332,0.194473907,-0.059623960,0.0078022...  \n",
+       "2  -0.286623657,-0.475376040,0.389155418,-0.02148...  \n",
+       "3  -0.235650897,0.229146853,0.033960193,0.4140678...  \n",
+       "4  0.015312393,-0.347834826,0.548787832,0.3676181...  \n",
+       "5  -0.042989660,-0.117782094,-0.385408580,-0.0250...  \n",
+       "6  -0.090764917,0.362341970,0.091229148,0.0380375...  \n",
+       "7  -0.022352766,0.292867452,0.112427264,-0.548713...  \n",
+       "8  -0.148279175,-0.122559994,0.022042088,0.378735...  \n",
+       "9  -0.724805176,0.686601639,0.449069679,-0.350856...  "
       ]
      },
      "execution_count": 9,
@@ -1946,9 +1966,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "kgtk-env",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "kgtk-env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1960,7 +1980,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
