--- a/tutorial/05-kg-enrichment-with-lod.ipynb
+++ b/tutorial/05-kg-enrichment-with-lod.ipynb
@@ -13,7 +13,22 @@
     "\n",
     "Specifically, we will investigate: *Does Getty contain complementary information to Wikidata about people's date of birth?*\n",
     "\n",
-    "We will use KGTK to import Getty data, align Getty to Wikidata, query dates of birth in both graphs separately, compare the results, and enrich the Wikidata graph with the missing information."
+    "We will use KGTK to import Getty data, align Getty to Wikidata, query dates of birth in both graphs separately, compare the results, and enrich the Wikidata graph with the missing information.\n",
+    "\n",
+    "### Setup (in Docker)\n",
+    "This notebook was tested using the Docker installation of KGTK. It was run from the [KGTK Notebooks cloned repository](https://github.com/usc-isi-i2/kgtk-notebooks/) as PWD. With that configuration, no changes should be needed to run the notebook.\n",
+    "\n",
+    "First, cd into the kgtk-notebooks folder:\n",
+    "\n",
+    "`cd kgtk-notebooks`\n",
+    "\n",
+    "Then run Docker:\n",
+    "\n",
+    "```\n",
+    "docker run -it --rm -v $PWD:/out -p 8888:8888 uscisii2/kgtk:latest-dev /bin/bash -c \"jupyter notebook --ip='*' --port=8888 --no-browser\"\n",
+    "```\n",
+    "\n",
+    "Notebooks can be found in `/out/tutorial/` "
    ]
   },
   {
@@ -69,23 +84,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "f62fd5b0-c242-48e7-9dfd-4d9dbaedb164",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Parameters\n",
+    "kgtk_path = \"/kgtk\"\n",
     "\n",
     "# Folder on local machine where to create the output and temporary folders\n",
-    "input_path = \"/Users/filipilievski/mcs/kgtk-tutorial-files/datasets/getty\"\n",
-    "output_path = \"/Users/filipilievski/mcs/kgtk-projects\"\n",
+    "input_path = \"/out/datasets/getty\"\n",
+    "output_path = \"/out/projects\"\n",
     "project_name = \"getty-enrichment\"\n",
     "# input_files_url=\"https://github.com/usc-isi-i2/kgtk-tutorial-files/raw/main/datasets/getty\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "fd172fb9-8155-4824-b443-4faa8d742279",
    "metadata": {},
    "outputs": [
@@ -93,10 +109,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "User home: /Users/filipilievski\n",
-      "Current dir: /Users/filipilievski/mcs/kgtk-tutorial-files/tutorial\n",
-      "KGTK dir: /Users/filipilievski/mcs/kgtk-tutorial-files\n",
-      "Use-cases dir: /Users/filipilievski/mcs/kgtk-tutorial-files/use-cases\n"
+      "User home: /home/jovyan\n",
+      "Current dir: /out/tutorial\n",
+      "KGTK dir: /kgtk\n",
+      "Use-cases dir: /kgtk/use-cases\n"
      ]
     }
    ],
@@ -106,7 +122,7 @@
     "    \"label\"\n",
     "]\n",
     "files.extend(extra_files_config.keys())\n",
-    "ck = ConfigureKGTK(files)\n",
+    "ck = ConfigureKGTK(files, kgtk_path=kgtk_path)\n",
     "ck.configure_kgtk(input_graph_path=input_path,\n",
     "                  output_path=output_path,\n",
     "                  project_name=project_name,\n",
@@ -115,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "c413a881-de11-4e47-a409-ee1d5720288f",
    "metadata": {},
    "outputs": [
@@ -123,24 +139,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KGTK_LABEL_FILE: /Users/filipilievski/mcs/kgtk-tutorial-files/datasets/getty/labels.en.tsv.gz\n",
-      "EXAMPLES_DIR: /Users/filipilievski/mcs/kgtk-tutorial-files/examples\n",
-      "OUT: /Users/filipilievski/mcs/kgtk-projects/getty-enrichment\n",
-      "GRAPH: /Users/filipilievski/mcs/kgtk-tutorial-files/datasets/getty\n",
+      "kypher: kgtk query --graph-cache /out/projects/getty-enrichment/temp.getty-enrichment/wikidata.sqlite3.db\n",
+      "EXAMPLES_DIR: /kgtk/examples\n",
+      "KGTK_LABEL_FILE: /out/datasets/getty/labels.en.tsv.gz\n",
+      "GRAPH: /out/datasets/getty\n",
+      "OUT: /out/projects/getty-enrichment\n",
       "kgtk: kgtk\n",
-      "USE_CASES_DIR: /Users/filipilievski/mcs/kgtk-tutorial-files/use-cases\n",
-      "TEMP: /Users/filipilievski/mcs/kgtk-projects/getty-enrichment/temp.getty-enrichment\n",
-      "KGTK_GRAPH_CACHE: /Users/filipilievski/mcs/kgtk-projects/getty-enrichment/temp.getty-enrichment/wikidata.sqlite3.db\n",
-      "kypher: kgtk query --graph-cache /Users/filipilievski/mcs/kgtk-projects/getty-enrichment/temp.getty-enrichment/wikidata.sqlite3.db\n",
-      "STORE: /Users/filipilievski/mcs/kgtk-projects/getty-enrichment/temp.getty-enrichment/wikidata.sqlite3.db\n",
+      "TEMP: /out/projects/getty-enrichment/temp.getty-enrichment\n",
       "KGTK_OPTION_DEBUG: false\n",
-      "all: /Users/filipilievski/mcs/kgtk-tutorial-files/datasets/getty/all.tsv.gz\n",
-      "label: /Users/filipilievski/mcs/kgtk-tutorial-files/datasets/getty/labels.en.tsv.gz\n",
-      "ulan_terms: /Users/filipilievski/mcs/kgtk-tutorial-files/datasets/getty/ULANOut_2Terms.nt.gz\n",
-      "ulan_subjects: /Users/filipilievski/mcs/kgtk-tutorial-files/datasets/getty/ULANOut_1Subjects.nt.gz\n",
-      "ulan_agentmap: /Users/filipilievski/mcs/kgtk-tutorial-files/datasets/getty/ULANOut_AgentMap.nt.gz\n",
-      "ulan_biographies: /Users/filipilievski/mcs/kgtk-tutorial-files/datasets/getty/ULANOut_Biographies.nt.gz\n",
-      "namespaces: /Users/filipilievski/mcs/kgtk-tutorial-files/datasets/getty/namespaces.tsv\n"
+      "STORE: /out/projects/getty-enrichment/temp.getty-enrichment/wikidata.sqlite3.db\n",
+      "KGTK_GRAPH_CACHE: /out/projects/getty-enrichment/temp.getty-enrichment/wikidata.sqlite3.db\n",
+      "USE_CASES_DIR: /kgtk/use-cases\n",
+      "all: /out/datasets/getty/all.tsv.gz\n",
+      "label: /out/datasets/getty/labels.en.tsv.gz\n",
+      "ulan_terms: /out/datasets/getty/ULANOut_2Terms.nt.gz\n",
+      "ulan_subjects: /out/datasets/getty/ULANOut_1Subjects.nt.gz\n",
+      "ulan_agentmap: /out/datasets/getty/ULANOut_AgentMap.nt.gz\n",
+      "ulan_biographies: /out/datasets/getty/ULANOut_Biographies.nt.gz\n",
+      "namespaces: /out/datasets/getty/namespaces.tsv\n"
      ]
     }
    ],
@@ -186,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "8b1d2555-3bc3-4026-bab3-53760fa1bdc3",
    "metadata": {},
    "outputs": [
@@ -305,7 +321,7 @@
        "[62 rows x 3 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "73fb6915-037d-48c3-85a7-d6ff33d6e9e9",
    "metadata": {},
    "outputs": [],
@@ -357,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "bb458fc6",
    "metadata": {},
    "outputs": [
@@ -365,8 +381,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 48.8 ms, sys: 42.1 ms, total: 90.9 ms\n",
-      "Wall time: 2min 25s\n"
+      "CPU times: user 41.5 ms, sys: 17.1 ms, total: 58.6 ms\n",
+      "Wall time: 2min 38s\n"
      ]
     }
    ],
@@ -389,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "e9277089-59e8-4909-861c-158cf5f9e7bb",
    "metadata": {},
    "outputs": [
@@ -498,7 +514,7 @@
        "9  ulan:500523050  skosxl:prefLabel  ulan_term:1501308181"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "bcd33982",
    "metadata": {},
    "outputs": [
@@ -519,8 +535,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 16.7 ms, sys: 17.2 ms, total: 33.9 ms\n",
-      "Wall time: 50.8 s\n"
+      "CPU times: user 15.2 ms, sys: 19.3 ms, total: 34.5 ms\n",
+      "Wall time: 59 s\n"
      ]
     }
    ],
@@ -3280,7 +3296,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3294,7 +3310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
