--- a/tutorial/06-kg-network-analysis.ipynb
+++ b/tutorial/06-kg-network-analysis.ipynb
@@ -13,7 +13,22 @@
     "- Extracting a network of interest from our KG (the extended family of Arnold Schwarzenegger)\n",
     "- Computing network analytics on the Arnold family graph\n",
     "- Creating visualizations of KGs using graph-tools\n",
-    "- Computing connected components of a KG"
+    "- Computing connected components of a KG\n",
+    "\n",
+    "### Setup (in Docker)\n",
+    "This notebook was tested using the Docker installation of KGTK. It was run from the [KGTK Notebooks cloned repository](https://github.com/usc-isi-i2/kgtk-notebooks/) as PWD. With that configuration, no changes should be needed to run the notebook.\n",
+    "\n",
+    "First, cd into the kgtk-notebooks folder:\n",
+    "\n",
+    "`cd kgtk-notebooks`\n",
+    "\n",
+    "Then run Docker:\n",
+    "\n",
+    "```\n",
+    "docker run -it --rm -v $PWD:/out -p 8888:8888 uscisii2/kgtk:latest-dev /bin/bash -c \"jupyter notebook --ip='*' --port=8888 --no-browser\"\n",
+    "```\n",
+    "\n",
+    "Notebooks can be found in `/out/tutorial/` "
    ]
   },
   {
@@ -51,20 +66,15 @@
    "source": [
     "# Parameters\n",
     "\n",
-    "kgtk_path = \"/Users/amandeep/GitHub/kgtk\"\n",
-    "kgtk_path = \"/Users/pedroszekely/Documents/GitHub/kgtk\"\n",
+    "kgtk_path = \"/kgtk\"\n",
     "\n",
-    "tutorial_deployment_path = \"/Volumes/saggu-ssd/kgtk-tutorial-files/datasets\"\n",
-    "tutorial_deployment_path = \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets\"\n",
+    "tutorial_deployment_path = \"/out/datasets\"\n",
     "\n",
     "\n",
     "\n",
     "# Folder on local machine where to create the output and temporary folders\n",
-    "input_path = \"/Volumes/saggu-ssd/kgtk-tutorial-files/datasets/arnold-profiled\"\n",
-    "input_path = \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled\"\n",
-    "\n",
-    "output_path = \"/Volumes/saggu-ssd/projects\"\n",
-    "output_path = \"/Users/pedroszekely/Downloads/kypher/projects\"\n",
+    "input_path = \"/out/datasets/arnold-profiled\"\n",
+    "output_path = \"/out/projects\"\n",
     "\n",
     "project_name = \"tutorial-network-analysis\"\n",
     "\n",
@@ -87,10 +97,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "User home: /Users/pedroszekely\n",
-      "Current dir: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/tutorial\n",
-      "KGTK dir: /Users/pedroszekely/Documents/GitHub/kgtk\n",
-      "Use-cases dir: /Users/pedroszekely/Documents/GitHub/kgtk/use-cases\n"
+      "User home: /home/jovyan\n",
+      "Current dir: /out/tutorial\n",
+      "KGTK dir: /kgtk\n",
+      "Use-cases dir: /kgtk/use-cases\n"
      ]
     }
    ],
@@ -114,19 +124,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OUT: /Users/pedroszekely/Downloads/kypher/projects/tutorial-network-analysis\n",
-      "KGTK_LABEL_FILE: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/labels.en.tsv.gz\n",
-      "EXAMPLES_DIR: /Users/pedroszekely/Documents/GitHub/kgtk/examples\n",
-      "GRAPH: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled\n",
-      "USE_CASES_DIR: /Users/pedroszekely/Documents/GitHub/kgtk/use-cases\n",
-      "KGTK_OPTION_DEBUG: false\n",
-      "kypher: kgtk query --graph-cache /Users/pedroszekely/Downloads/kypher/projects/tutorial-network-analysis/temp.tutorial-network-analysis/wikidata.sqlite3.db\n",
-      "TEMP: /Users/pedroszekely/Downloads/kypher/projects/tutorial-network-analysis/temp.tutorial-network-analysis\n",
-      "KGTK_GRAPH_CACHE: /Users/pedroszekely/Downloads/kypher/projects/tutorial-network-analysis/temp.tutorial-network-analysis/wikidata.sqlite3.db\n",
+      "KGTK_GRAPH_CACHE: /out/projects/tutorial-network-analysis/temp.tutorial-network-analysis/wikidata.sqlite3.db\n",
       "kgtk: kgtk\n",
-      "STORE: /Users/pedroszekely/Downloads/kypher/projects/tutorial-network-analysis/temp.tutorial-network-analysis/wikidata.sqlite3.db\n",
-      "label: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/labels.en.tsv.gz\n",
-      "item: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/claims.wikibase-item.tsv.gz\n"
+      "STORE: /out/projects/tutorial-network-analysis/temp.tutorial-network-analysis/wikidata.sqlite3.db\n",
+      "OUT: /out/projects/tutorial-network-analysis\n",
+      "GRAPH: /out/datasets/arnold-profiled\n",
+      "kypher: kgtk query --graph-cache /out/projects/tutorial-network-analysis/temp.tutorial-network-analysis/wikidata.sqlite3.db\n",
+      "TEMP: /out/projects/tutorial-network-analysis/temp.tutorial-network-analysis\n",
+      "KGTK_LABEL_FILE: /out/datasets/arnold-profiled/labels.en.tsv.gz\n",
+      "USE_CASES_DIR: /kgtk/use-cases\n",
+      "EXAMPLES_DIR: /kgtk/examples\n",
+      "KGTK_OPTION_DEBUG: false\n",
+      "label: /out/datasets/arnold-profiled/labels.en.tsv.gz\n",
+      "item: /out/datasets/arnold-profiled/claims.wikibase-item.tsv.gz\n"
      ]
     }
    ],
@@ -166,13 +176,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kgtk query --graph-cache /Users/pedroszekely/Downloads/kypher/projects/tutorial-network-analysis/temp.tutorial-network-analysis/wikidata.sqlite3.db -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/labels.en.tsv.gz\" --as label  -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/claims.wikibase-item.tsv.gz\" --as item  --limit 3\n",
+      "kgtk query --graph-cache /out/projects/tutorial-network-analysis/temp.tutorial-network-analysis/wikidata.sqlite3.db -i \"/out/datasets/arnold-profiled/labels.en.tsv.gz\" --as label  -i \"/out/datasets/arnold-profiled/claims.wikibase-item.tsv.gz\" --as item  --limit 3\n",
       "node1\tlabel\tnode2\tid\n",
       "P10\tlabel\t'video'@en\tP10-label-en\n",
       "P1000\tlabel\t'record held'@en\tP1000-label-en\n",
       "P1001\tlabel\t'applies to jurisdiction'@en\tP1001-label-en\n",
-      "CPU times: user 4.07 ms, sys: 12.9 ms, total: 16.9 ms\n",
-      "Wall time: 2.94 s\n"
+      "CPU times: user 4.03 ms, sys: 6.79 ms, total: 10.8 ms\n",
+      "Wall time: 1.41 s\n"
      ]
     }
    ],
@@ -190,7 +200,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/pedroszekely/Downloads/kypher/projects/tutorial-network-analysis\n"
+      "/out/projects/tutorial-network-analysis\n"
      ]
     }
    ],
@@ -219,8 +229,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6.11 ms, sys: 13.9 ms, total: 20 ms\n",
-      "Wall time: 10.3 s\n"
+      "CPU times: user 8.43 ms, sys: 8.31 ms, total: 16.7 ms\n",
+      "Wall time: 8.31 s\n"
      ]
     }
    ],
@@ -398,8 +408,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 95 ms, sys: 30.7 ms, total: 126 ms\n",
-      "Wall time: 2.96 s\n"
+      "CPU times: user 86.5 ms, sys: 17.3 ms, total: 104 ms\n",
+      "Wall time: 2.86 s\n"
      ]
     },
     {
@@ -574,8 +584,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6.29 ms, sys: 14.3 ms, total: 20.6 ms\n",
-      "Wall time: 2.91 s\n"
+      "CPU times: user 9.51 ms, sys: 5.36 ms, total: 14.9 ms\n",
+      "Wall time: 2.23 s\n"
      ]
     },
     {
@@ -763,8 +773,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.92 ms, sys: 12.9 ms, total: 16.8 ms\n",
-      "Wall time: 1.71 s\n"
+      "CPU times: user 5.26 ms, sys: 12.9 ms, total: 18.2 ms\n",
+      "Wall time: 1.5 s\n"
      ]
     }
    ],
@@ -990,8 +1000,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 9.3 ms, sys: 24.6 ms, total: 33.9 ms\n",
-      "Wall time: 3.28 s\n"
+      "CPU times: user 8.31 ms, sys: 16.4 ms, total: 24.7 ms\n",
+      "Wall time: 2.07 s\n"
      ]
     },
     {
@@ -2334,9 +2344,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "kgtk",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "kgtk"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2348,7 +2358,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
