--- a/tutorial/07-kg-constraint-validation.ipynb
+++ b/tutorial/07-kg-constraint-validation.ipynb
@@ -17,15 +17,20 @@
     "\n",
     "3- Explorarion of an example\n",
     "\n",
-    "### Disclaimer\n",
-    "The data for the constraint violation works with the data that we have in the graph, which is not the complete taxonomy of Wikidata. Some constraint violations may be due to an incomplete taxonomy.\n",
-    "\n",
-    "### Setup\n",
+    "### Setup (in Docker)\n",
     "This notebook was tested using the Docker installation of KGTK. It was run from the [KGTK Notebooks cloned repository](https://github.com/usc-isi-i2/kgtk-notebooks/) as PWD. With that configuration, no changes should be needed to run the notebook.\n",
+    "\n",
+    "First, cd into the kgtk-notebooks folder:\n",
+    "\n",
+    "`cd kgtk-notebooks`\n",
+    "\n",
+    "Then run Docker:\n",
     "\n",
     "```\n",
     "docker run -it --rm -v $PWD:/out -p 8888:8888 uscisii2/kgtk:latest-dev /bin/bash -c \"jupyter notebook --ip='*' --port=8888 --no-browser\"\n",
-    "```"
+    "```\n",
+    "\n",
+    "Notebooks can be found in `/out/tutorial/` "
    ]
   },
   {
@@ -125,14 +130,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TEMP: /out/projects/tutorial-constraints/temp.tutorial-constraints\n",
-      "kypher: kgtk query --graph-cache /out/projects/tutorial-constraints/temp.tutorial-constraints/wikidata.sqlite3.db\n",
-      "STORE: /out/projects/tutorial-constraints/temp.tutorial-constraints/wikidata.sqlite3.db\n",
-      "kgtk: kgtk\n",
+      "KGTK_OPTION_DEBUG: false\n",
       "EXAMPLES_DIR: /kgtk/examples\n",
-      "USE_CASES_DIR: /kgtk/use-cases\n",
+      "TEMP: /out/projects/tutorial-constraints/temp.tutorial-constraints\n",
+      "STORE: /out/projects/tutorial-constraints/temp.tutorial-constraints/wikidata.sqlite3.db\n",
+      "KGTK_GRAPH_CACHE: /out/projects/tutorial-constraints/temp.tutorial-constraints/wikidata.sqlite3.db\n",
+      "KGTK_LABEL_FILE: /out/datasets/arnold/labels.en.tsv.gz\n",
       "OUT: /out/projects/tutorial-constraints\n",
       "GRAPH: /out/datasets/arnold\n",
+      "USE_CASES_DIR: /kgtk/use-cases\n",
+      "kgtk: kgtk\n",
+      "kypher: kgtk query --graph-cache /out/projects/tutorial-constraints/temp.tutorial-constraints/wikidata.sqlite3.db\n",
       "all: /out/datasets/arnold/all.tsv.gz\n",
       "label: /out/datasets/arnold/labels.en.tsv.gz\n",
       "alias: /out/datasets/arnold/aliases.en.tsv.gz\n",
@@ -185,8 +193,8 @@
       "P10\talias\t'gif'@en\tP10-alias-en-282226-0\t\n",
       "P10\talias\t'animation'@en\tP10-alias-en-2f86d8-0\t\n",
       "P10\talias\t'media'@en\tP10-alias-en-c1427e-0\t\n",
-      "CPU times: user 8.27 ms, sys: 374 µs, total: 8.64 ms\n",
-      "Wall time: 8.6 s\n"
+      "CPU times: user 2.77 ms, sys: 10.6 ms, total: 13.4 ms\n",
+      "Wall time: 872 ms\n"
      ]
     }
    ],
@@ -213,8 +221,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 8.76 ms, sys: 9.68 ms, total: 18.4 ms\n",
-      "Wall time: 2.82 s\n"
+      "CPU times: user 6.02 ms, sys: 13.8 ms, total: 19.9 ms\n",
+      "Wall time: 1.63 s\n"
      ]
     },
     {
@@ -427,8 +435,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 9.84 ms, sys: 9.52 ms, total: 19.4 ms\n",
-      "Wall time: 4.64 s\n"
+      "CPU times: user 8.89 ms, sys: 8.94 ms, total: 17.8 ms\n",
+      "Wall time: 1.45 s\n"
      ]
     },
     {
@@ -1031,8 +1039,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4.41 ms, sys: 4.47 ms, total: 8.88 ms\n",
-      "Wall time: 1.25 s\n"
+      "CPU times: user 3.48 ms, sys: 3.59 ms, total: 7.07 ms\n",
+      "Wall time: 1.14 s\n"
      ]
     }
    ],
@@ -1419,9 +1427,7 @@
     "The first result is cooking, that has the property \"location\" linking to kitchen.\n",
     "Since kitchen is not from any of the classes belonging to the range specified in the constraint, the property fails.\n",
     "\n",
-    "Another example is Q7931198, which is the Vilnius University Institute of International Relations and Political Science, but its location is **German** instead of **Germany**\n",
-    "\n",
-    "**Note that the graph we are handling is an incomplete subset of Wikidata, and part of the taxonomy has not been imported. Thus some of the elements of the list may be correct**"
+    "Another example is Q7931198, which is the Vilnius University Institute of International Relations and Political Science, but its location is **German** instead of **Germany**"
    ]
   }
  ],
