--- a/tutorial/kgtk-browser.ipynb
+++ b/tutorial/kgtk-browser.ipynb
@@ -286,9 +286,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "kgtk-env",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "kgtk-env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -300,7 +300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
